# rplanner

./: .gitignore  Cargo.toml  Makefile  rplanner.db
rplanner-client/: Cargo.toml  index.html
rplanner-client/css/: notes.css  root.css
rplanner-client/src/: event_bus.rs  lib.rs
rplanner-client/src/modal/: components.rs
rplanner-client/src/notes/: api.rs  components.rs  mod.rs  util.rs
rplanner-client/src/root/: agents.rs  components.rs  mod.rs
rplanner-client/src/todo/: components.rs
rplanner-web/: .eslintcache  .gitignore  package.json
rplanner-web/src/: api.ts  app.css  app.tsx  index.tsx  notes.tsx
src/: \  data.rs  internal_error.rs  main.rs  rplanner.db
src/notes/: data.rs  endpoints.rs  helpers.rs  mod.rs
src/todo/: data.rs  mod.rs  util.rs
