[package]
name = "rplanner"
version = "0.1.0"
authors = ["Steven Pham <steven.pham.8.2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.24.2"
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde_json = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
