[package]
name = "rplanner-client"
version = "0.1.0"
authors = ["Steven Pham <steven.pham.8.2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.18.0"
wasm-bindgen = "0.2.71"
serde_json = "1.0.64"
web-sys = { version = "0.3.48", features = ["HtmlCollection", "Element", "HtmlImageElement", "CssStyleDeclaration", "Blob", "FormData", "Selection", "Window", "Node", "DomStringMap", "Range", "NodeList"] }
serde = { version = "1.0.126", features = ["derive"] }
chrono = { version = "0.4.19", features = ["wasmbind"] }
anyhow = "1.0.38"
